Fix bug #76524 - ZipArchive memory leak